infra/k8s/03.01-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoid-app
  namespace: ${GKE_NAMESPACE}
  labels:
    app: geoid-app
    env: ${ENVIRONMENT}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoid-app
  template:
    metadata:
      labels:
        app: geoid-app
    spec:
      serviceAccountName: geoid-app-ksa
      containers:
      - name: geoid-app
        image: ${IMAGE_REGISTRY}/geoid-ui:${VERSION}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            memory: 768Mi
        volumeMounts:
        - name: gcp-secrets-inline
          mountPath: /app/.env.local
          subPath: .env.local
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
      volumes:
      - name: gcp-secrets-inline
        csi:
          driver: secrets-store-gke.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "geoid-secrets-provider"
---
apiVersion: v1
kind: Service
metadata:
  name: geoid-app
  namespace: ${GKE_NAMESPACE}
spec:
  selector:
    app: geoid-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
