infra/k8s/09.01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoid-ingress
  namespace: ${GKE_NAMESPACE}
  labels:
    app: geoid-ingress
    env: ${ENVIRONMENT}
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ${GKE_LB_STATIC_IP_NAME}
    networking.gke.io/managed-certificates: geoid-managed-cert
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geoid-app
            port:
              number: 80
